--- a/settings.gradle
+++ b/settings.gradle
@@ -35,14 +35,18 @@ include ':spring-cloud:server'
 project(':spring-cloud:server').projectDir = file('spring-cloud/server')
 include ':spring-cloud:server2'
 project(':spring-cloud:server2').projectDir = file('spring-cloud/server2')
+
 include ':spring-cloud:consume'
-project(':spring-cloud:consume').projectDir = file('spring-cloud/m-consume')
+project(':spring-cloud:consume').projectDir = file('spring-cloud/consume')
 include ':spring-cloud:consume-ribbon'
-project(':spring-cloud:consume-ribbon').projectDir = file('spring-cloud/m-consume-ribbon')
+project(':spring-cloud:consume-ribbon').projectDir = file('spring-cloud/consume-ribbon')
 include ':spring-cloud:consume-feign'
-project(':spring-cloud:consume-feign').projectDir = file('spring-cloud/m-consume-feign')
+project(':spring-cloud:consume-feign').projectDir = file('spring-cloud/consume-feign')
+
 include ':spring-cloud:config-server'
 project(':spring-cloud:config-server').projectDir = file('spring-cloud/config-server')
+include ':spring-cloud:nacos-config-server'
+project(':spring-cloud:nacos-config-server').projectDir = file('spring-cloud/nacos-config-server')
 include ':spring-cloud:config-client'
 project(':spring-cloud:config-client').projectDir = file('spring-cloud/config-client')
 include ':spring-cloud:hystrix-client'
