分布式事务学习

--- a/seata/seata-account/build.gradle
+++ b/seata/seata-account/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id "java-library"
 }
 
-
-group 'seata-test'
+group 'seata-account'
 version "$projectVersion"
 
 dependencies {
@@ -20,8 +19,6 @@ dependencies {
     implementation ("org.apache.dubbo:dubbo-spring-boot-starter:$dubboSpringBootVersion")
     implementation ("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
 
-    implementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
-    implementation 'junit:junit:4.12'
 }
 
 
