--- a/seata/seata-storage/src/main/resources/application.properties
+++ b/seata/seata-storage/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=8200
-spring.application.name=seata-test
+server.port=8100
+spring.application.name=seata-storage
 
 #====================================Dubbo config===============================================
-dubbo.application.id= seata-test
-dubbo.application.name= seata-test
+dubbo.application.id= seata-storage
+dubbo.application.name= seata-storage
 dubbo.protocol.id=dubbo
 dubbo.protocol.name=dubbo
-dubbo.registry.id=seata-provide2
+dubbo.registry.id=seata-storage
 dubbo.protocol.port=-1
 dubbo.registry.address=zookeeper://zk.alfredhua.com:2181
 dubbo.application.qosEnable=false
