--- a/java/java-jvm/build.gradle
+++ b/java/java-jvm/build.gradle
@@ -8,7 +8,8 @@ version "$projectVersion"
 
 dependencies {
 
-
+    implementation ("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
+    compile project(":common")
 }
 
 
