--- a/settings.gradle
+++ b/settings.gradle
@@ -52,7 +52,6 @@ project(':spring-cloud:config-client').projectDir = file('spring-cloud/config-cl
 include ':spring-cloud:hystrix-client'
 project(':spring-cloud:hystrix-client').projectDir = file('spring-cloud/hystrix-client')
 
-
 include ':seata:seata-api'
 project(':seata:seata-api').projectDir = file('seata/seata-api')
 include ':seata:seata-account'
@@ -65,5 +64,9 @@ project(':seata:seata-test').projectDir = file('seata/seata-test')
 include ':kafka:kafka-java'
 project(':kafka:kafka-java').projectDir = file('kafka/kafka-java')
 
-include ':spark:spark-java'
-project(':spark:spark-java').projectDir = file('spark/spark-java')
+include ':hadoop:spark'
+project(':hadoop:spark').projectDir = file('hadoop/spark')
+include ':hadoop:hive'
+project(':hadoop:hive').projectDir = file('hadoop/hive')
+include ':hadoop:map-reduce'
+project(':hadoop:map-reduce').projectDir = file('hadoop/map-reduce')
