--- a/hadoop/spark/build.gradle
+++ b/hadoop/spark/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     implementation group: 'org.apache.spark', name: 'spark-streaming_2.12', version: '3.1.2'
     implementation("mysql:mysql-connector-java:$mysqlConnectorVersion")
 
+    implementation group: 'org.apache.spark', name: 'spark-streaming-kafka_2.11', version: '1.6.3'
+
+
     compile "org.scala-lang:scala-library:2.12.1"
     compile "org.scala-lang:scala-compiler:2.12.1"
     compile "org.scala-lang:scala-reflect:2.12.1"
