--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id "java-library"
 }
-
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 allprojects {
     repositories {
         mavenLocal()
@@ -12,6 +13,7 @@ allprojects {
         maven { url 'https://jitpack.io' }
         jcenter()
     }
+    
 }
 
 subprojects{
