--- a/hadoop/flink/build.gradle
+++ b/hadoop/flink/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     implementation group: 'org.apache.flink', name: 'flink-java', version: '1.13.1'
     implementation group: 'org.apache.flink', name: 'flink-streaming-java_2.12', version: '1.13.1'
     implementation group: 'org.apache.flink', name: 'flink-clients_2.12', version: '1.13.1'
-
+    implementation 'org.apache.flink:flink-connector-jdbc_2.12:1.13.1'
 }
 
 jar {
