--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id "java-library"
 }
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 allprojects {
     repositories {
         mavenLocal()
+        mavenCentral()
         maven{
             url 'https://maven.aliyun.com/nexus/content/groups/public'
         }
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
-        jcenter()
+//        maven { url 'https://jitpack.io' }
+//        jcenter()
     }
     
 }
